<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp"
    xmlns:android="http://schemas.android.com/apk/res/android">

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/abrir_alert"
    android:onClick="abrirAlert"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrir_alert_com_itens"
        android:onClick="abrirAlertComItens"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_com_radio"
        android:onClick="abrirAlertComRadio"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_com_check"
        android:onClick="abrirAlertComCheck"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrir_progressdialog"
        android:onClick="abrirAlertComProgress"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrir_date_picker_dialog"
        android:onClick="abrirAlertComDatePickerDialog"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrir_time_picker"
        android:onClick="abrirAlertComTimePickerDialog"/>





</LinearLayout>